# Argonodes

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  argonodes.html  genindex.html  helpers.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: ---blank-template.md  ---bug-report.md  ---feature-request.md  ---parser-request.md
.github/workflows/: gh-pages.yml  python-package.yml
_sources/: helpers.rst.txt  index.rst.txt  modules.rst.txt
_sources/modules/: models.rst.txt
docs/: README.rst
docs/source/: argonodes.rst  conf.py  index.rst
examples/: README.md  requirements.txt
examples/inputs/: .gitignore  pull_requests_000001.json
examples/models/: twitter.csv
examples/notebook/: .gitignore  Example – GitHub pull requests.ipynb  Example.ipynb
examples/webapp/: app.py
modules/: appliers.html  exporters.html  filters.html  models.html  nodes.html  parsers.html
requirements/: argonodes.txt  dev.txt  docs.txt  examples.txt  extra.txt
src/argonodes/: appliers.py  applies.py  default_context.py  exporters.py  filters.py  helpers.py  model.py  models.py  nodes.py  parsers.py
src/json-ld-semantics/: helpers.py  model.py  semantics.py  tree.py
src/json_ld_semantics/: abstract.py  default_context.py  filters.py  helpers.py  model.py  parsers.py  semantics.py
tests/: requirements.txt  test_nodes.py  test_semantics.py
tests/inputs/: .gitignore  2022_MARCH.json
(+6 files in other folders)
